--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,13 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>4.3.5.Final</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-server</artifactId>
+			<version>1.8</version>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<finalName>ProjetoRestaurante</finalName>
